FEAT: ajout du copyright

--- a/index.html
+++ b/index.html
@@ -57,6 +57,15 @@
     </div>
 </div>
 
+<footer>
+    <p>
+        Réalisé par Nathanaël Derousseaux en réponse au défi de Benjamin Code.
+        <br>
+        Le design n'a pas été conçu par Nathanaël Derousseaux.
+        <br>
+        Il s'agit d'un projet de formation et ne représente pas C.P. Company.
+    </p>
+</footer>
 
 
 </body>
